cn/snowskystudio/newgame/test/error/ArgumentNameDoesNotExists.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class ArgumentNameDoesNotExists(BaseError):
    TYPE = "ArgumentNameDoesNotExists"